v0.2.3: new Register & Login system (works, finally)